# CppAlessiaBot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HttpRequest.h  Makefile  README.md  cmake_install.cmake  constants.h  emoji.cpp  emoji.h  main.cpp  stringUtils.cpp  stringUtils.h
.cmake/api/v1/reply/: cache-v2-013088693b9282f2a893.json  cmakeFiles-v1-7557386979702e26b5ba.json  codemodel-v2-b2b19aced489fd173a56.json  directory-_deps.cpr-build.cpr-Debug-8e0cb225fe1a65fda9c8.json  directory-_deps.curl-build-Debug-84f4636e585cfb93c053.json  directory-_deps.curl-build.lib-Debug-4de440aecedeee180eb0.json  directory-_deps.zlib-build-Debug-f623497fd3bff1481dd5.json  index-2021-12-23T18-04-25-0347.json  target-CppAlessiaBot-Debug-05fedd92b67ae2824ded.json  target-cpr-Debug-7f768712c39d3a43b719.json  target-libcurl-Debug-3c56056f5475ebd4c2fa.json  target-uninstall-Debug-5d31404311997483f100.json  target-zlib-Debug-6b5a7be397a421f9a203.json
